// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText component closes dialog 1`] = `
<div>
  <div
    class="RichText-root css-17t4j5c"
  >
    <h2
      class="MuiTypography-root MuiTypography-h2 RichText-title css-ta8c5q-MuiTypography-root"
      data-testid="typography"
    >
      Heading 2
    </h2>
    <h3
      class="MuiTypography-root MuiTypography-h3 RichText-title css-d7brak-MuiTypography-root"
      data-testid="typography"
    >
      Heading 3
    </h3>
    <h4
      class="MuiTypography-root MuiTypography-h4 RichText-title css-1ekntu4-MuiTypography-root"
      data-testid="typography"
    >
      Heading 4
    </h4>
    <h5
      class="MuiTypography-root MuiTypography-h5 RichText-title css-10q7alf-MuiTypography-root"
      data-testid="typography"
    >
      Heading 5
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-h6 RichText-title css-1le86ss-MuiTypography-root"
      data-testid="typography"
    >
      Heading 6
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      Paragraph 
      <strong>
        bold 
      </strong>
      <i>
        italic 
      </i>
      <u>
        underline
      </u>
        
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"External\\",\\"action\\":\\"https://google.co.uk\\"}"
        data-testid="anchor-link"
        href="https://google.co.uk"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          External
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Entry\\",\\"action\\":\\"/testing-simple-page/\\"}"
        data-testid="anchor-link"
        href="/testing-simple-page/"
      >
        <span>
          Entry
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Asset\\",\\"action\\":\\"https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png\\"}"
        data-testid="anchor-link"
        href="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          Asset
        </span>
      </a>
       
      <button
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLink css-11nrv4h-MuiButtonBase-root-MuiButton-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Aerodek Robust Plus\\",\\"action\\":\\"product-category-page/product-sub-category-page/aerodek-robust-plus/\\"}"
        tabindex="0"
        type="button"
      >
        Aerodek Robust Plus
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      
    </p>
    <ul>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
          data-testid="typography"
        >
          UL
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
          data-testid="typography"
        >
          OL
        </p>
      </li>
    </ol>
    <blockquote>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
        data-testid="typography"
      >
        Blockquote
      </p>
    </blockquote>
    <hr />
    <button
      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLink css-11nrv4h-MuiButtonBase-root-MuiButton-root"
      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Support\\",\\"action\\":\\"landing-page/\\"}"
      tabindex="0"
      type="button"
    >
      Support
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <img
      alt="Customer Support"
      class="embedded-asset"
      src="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      <button
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button Anchorlink css-4gnc4v-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Open dialog\\",\\"action\\":\\"Dialog\\"}"
        data-testid="anchor-link"
        type="button"
      >
        <span>
          Open dialog
        </span>
      </button>
      
    </p>
  </div>
</div>
`;

exports[`RichText component falls back with incorrect data 1`] = `
<div>
  <div
    class="RichText-root css-17t4j5c"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    />
  </div>
</div>
`;

exports[`RichText component renders correctly 1`] = `
<div>
  <div
    class="RichText-root css-17t4j5c"
  >
    <h2
      class="MuiTypography-root MuiTypography-h2 RichText-title css-ta8c5q-MuiTypography-root"
      data-testid="typography"
    >
      Heading 2
    </h2>
    <h3
      class="MuiTypography-root MuiTypography-h3 RichText-title css-d7brak-MuiTypography-root"
      data-testid="typography"
    >
      Heading 3
    </h3>
    <h4
      class="MuiTypography-root MuiTypography-h4 RichText-title css-1ekntu4-MuiTypography-root"
      data-testid="typography"
    >
      Heading 4
    </h4>
    <h5
      class="MuiTypography-root MuiTypography-h5 RichText-title css-10q7alf-MuiTypography-root"
      data-testid="typography"
    >
      Heading 5
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-h6 RichText-title css-1le86ss-MuiTypography-root"
      data-testid="typography"
    >
      Heading 6
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      Paragraph 
      <strong>
        bold 
      </strong>
      <i>
        italic 
      </i>
      <u>
        underline
      </u>
        
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"External\\",\\"action\\":\\"https://google.co.uk\\"}"
        data-testid="anchor-link"
        href="https://google.co.uk"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          External
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Entry\\",\\"action\\":\\"/testing-simple-page/\\"}"
        data-testid="anchor-link"
        href="/testing-simple-page/"
      >
        <span>
          Entry
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Asset\\",\\"action\\":\\"https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png\\"}"
        data-testid="anchor-link"
        href="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          Asset
        </span>
      </a>
       
      <button
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLink css-11nrv4h-MuiButtonBase-root-MuiButton-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Aerodek Robust Plus\\",\\"action\\":\\"product-category-page/product-sub-category-page/aerodek-robust-plus/\\"}"
        tabindex="0"
        type="button"
      >
        Aerodek Robust Plus
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      
    </p>
    <ul>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
          data-testid="typography"
        >
          UL
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
          data-testid="typography"
        >
          OL
        </p>
      </li>
    </ol>
    <blockquote>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
        data-testid="typography"
      >
        Blockquote
      </p>
    </blockquote>
    <hr />
    <button
      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLink css-11nrv4h-MuiButtonBase-root-MuiButton-root"
      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Support\\",\\"action\\":\\"landing-page/\\"}"
      tabindex="0"
      type="button"
    >
      Support
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <img
      alt="Customer Support"
      class="embedded-asset"
      src="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      <button
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button Anchorlink css-4gnc4v-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Open dialog\\",\\"action\\":\\"Dialog\\"}"
        data-testid="anchor-link"
        type="button"
      >
        <span>
          Open dialog
        </span>
      </button>
      
    </p>
  </div>
</div>
`;

exports[`RichText component renders when dialog clicked 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="RichText-root css-17t4j5c"
  >
    <h2
      class="MuiTypography-root MuiTypography-h2 RichText-title css-ta8c5q-MuiTypography-root"
      data-testid="typography"
    >
      Heading 2
    </h2>
    <h3
      class="MuiTypography-root MuiTypography-h3 RichText-title css-d7brak-MuiTypography-root"
      data-testid="typography"
    >
      Heading 3
    </h3>
    <h4
      class="MuiTypography-root MuiTypography-h4 RichText-title css-1ekntu4-MuiTypography-root"
      data-testid="typography"
    >
      Heading 4
    </h4>
    <h5
      class="MuiTypography-root MuiTypography-h5 RichText-title css-10q7alf-MuiTypography-root"
      data-testid="typography"
    >
      Heading 5
    </h5>
    <h6
      class="MuiTypography-root MuiTypography-h6 RichText-title css-1le86ss-MuiTypography-root"
      data-testid="typography"
    >
      Heading 6
    </h6>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      Paragraph 
      <strong>
        bold 
      </strong>
      <i>
        italic 
      </i>
      <u>
        underline
      </u>
        
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"External\\",\\"action\\":\\"https://google.co.uk\\"}"
        data-testid="anchor-link"
        href="https://google.co.uk"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          External
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Entry\\",\\"action\\":\\"/testing-simple-page/\\"}"
        data-testid="anchor-link"
        href="/testing-simple-page/"
      >
        <span>
          Entry
        </span>
      </a>
       
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Asset\\",\\"action\\":\\"https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png\\"}"
        data-testid="anchor-link"
        href="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span>
          Asset
        </span>
      </a>
       
      <button
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLink css-11nrv4h-MuiButtonBase-root-MuiButton-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Aerodek Robust Plus\\",\\"action\\":\\"product-category-page/product-sub-category-page/aerodek-robust-plus/\\"}"
        tabindex="0"
        type="button"
      >
        Aerodek Robust Plus
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      
    </p>
    <ul>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
          data-testid="typography"
        >
          UL
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
          data-testid="typography"
        >
          OL
        </p>
      </li>
    </ol>
    <blockquote>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
        data-testid="typography"
      >
        Blockquote
      </p>
    </blockquote>
    <hr />
    <button
      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium EmbeddedLink css-11nrv4h-MuiButtonBase-root-MuiButton-root"
      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Support\\",\\"action\\":\\"landing-page/\\"}"
      tabindex="0"
      type="button"
    >
      Support
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <img
      alt="Customer Support"
      class="embedded-asset"
      src="https://images.ctfassets.net/lyjgwec8n2tq/70GS3lLVmrS7k71kH3iSbq/425f76789e7f7a8cb10d1d4ed9073d95/Customer-support.png"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-abi5v8-MuiTypography-root"
      data-testid="typography"
    >
      <button
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button Anchorlink css-4gnc4v-MuiTypography-root-MuiLink-root"
        data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"Open dialog\\",\\"action\\":\\"Dialog\\"}"
        data-testid="anchor-link"
        type="button"
      >
        <span>
          Open dialog
        </span>
      </button>
      
    </p>
  </div>
</div>
`;

exports[`RichText component renders with no data 1`] = `<div />`;
